--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "socket.io": "^2.3.0",
-    "ts-node": "^9.0.0"
-  },
-  "devDependencies": {
+    "ts-node": "^9.0.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.6",
     "@types/socket.io": "^2.1.11",
-    "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
